Store auth data in cookie; auto-login if auth cookie exists

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.4.1",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "js-cookie": "^2.2.1",
     "react": "~16.9.0",
     "react-dom": "~16.13.1",
     "react-github-login": "^1.0.3",
